fix small cards alignment

--- a/src/Components/MainPage/MainPage.scss
+++ b/src/Components/MainPage/MainPage.scss
@@ -19,8 +19,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            grid-template-rows: 1fr 1fr 1fr;
             width: 100%;
+
+            >* {
+                flex: 1;
+            }
         }
     }
 
@@ -54,6 +57,7 @@
     .data-wraper {
         display: flex;
         justify-content: center;
+        align-items: center;
         gap: var(--padding-l);
         font-size: 1em;
         font-weight: bold;
@@ -65,7 +69,6 @@
         align-items: center;
         justify-content: center;
         gap: var(--padding-m);
-        width: 100%;
 
         i {
             display: flex;
