--- a/src/Components/MainPage/SoldierCountCard/SoldierCountCard.scss
+++ b/src/Components/MainPage/SoldierCountCard/SoldierCountCard.scss
@@ -6,4 +6,9 @@
         background-color: var(--light-text-color);
         font-weight: bold;
     }
+
+    .data-div {
+        padding: 0 5px;
+        gap: var(--padding-s);
+    }
 }
