--- a/src/Components/MainPage/WeatherCard/WeatherCard.scss
+++ b/src/Components/MainPage/WeatherCard/WeatherCard.scss
@@ -39,7 +39,6 @@
 
     .wind {
         display: flex;
-        justify-content: center;
         align-items: center;
     }
 }
